# mergeMesh

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mergeMeshes.cpp  mergeMeshes.h
models/: Opera_de_Sydney.off
